--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,31 @@
-j
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Welcome To G&T Home Services</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
+	         
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/Services">Services</a></li>
+        		<li><a href="/Register">Register</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
+    		<div class="blurb">
+        		<h1 style="text-align:center;","background-color:tomato;"> Welcome To G&T Home Services</h1>
+				<h2 style="text-align:center;", "background-color:powderblue;">Acomplete Home Services</h2>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+		<footer>
+    		<ul>
+        		<li><a href="mailto:gnthomeservices@gmail.com">email</a></li>
+        		<li><a href="https://github.com/gnthomeservices">github.com/gnthomeservices</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
